deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: horsebets
  name: horsebets
  namespace: horsebets
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: horsebets
  strategy:
    rollingUpdate:
      maxSurge: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: horsebets
    spec:
      containers:
      - image: paulgmiller/horsebets:85fcca9
        name: horsebets
        resources: {}
